testsuite/poke.pkl/add-f32-diag-1.pk
/* { dg-do compile } */

var res
  = 11L .+ 1; /* { dg-error "mismatch between the width of LHS and RHS.*" } */
